welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:7: error: '(' expected but 'else' found.
  if else(weekday==false){a=true                    
     ^