welcome.lessons.welcome.bat.bool1.SleepIn.scala.code

var a: Boolean=false
def sleepIn(weekday:Boolean, vacation:Boolean): Boolean = {
  if (vacation==true){
    a=true
  }
  if else(weekday==false){a=true                    
    }else{
  a=false
}
  return a
}